--- a/web-stitches/index.html
+++ b/web-stitches/index.html
@@ -54,19 +54,10 @@
 
     <ul class="md:text-sm text-xs text-grey-dark list-reset flex items-center flex-row">
       <li>
-        <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
-          href="https://www.patreon.com/bePatron?u=34703537" target="_blank">
-          <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
-          &nbsp;
-          <span> Become a patron</span>
-        </a>
-      </li>
-      <li>
-        <a href="https://www.buymeacoffee.com/trendydots" target="_blank"
-          class="btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
-          <img src="../bmc-logo.svg" style="height: 1.5em; vertical-align: middle;" alt="">
-          &nbsp;&nbsp;
-          <span> Buy me a coffee</span>
+        <a href="https://pazly.dev" target="_blank"
+          class="text-xl btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
+          <span> Go to &nbsp;</span> <img src="https://pazly.dev/logo-extended.png"
+            style="height: 1.5em; vertical-align: middle;" alt="">
         </a>
       </li>
 
@@ -78,157 +69,30 @@
   <section style="margin-bottom: 0; margin-top:110px; "
     class="font-sans container m-auto max-w-xl flex flex-col lg:flex-row text-center lg:text-left sm:items-center md:px-8">
     <div class="w-full lg:w-1/2">
-      <img src="./images/m-header.png" alt="" style="margin-top: 20px;" />
+      <img src="https://pazly.dev/hero.png" alt="" style="margin-top: 20px;" />
+      <img src="./images/tailwindCssIcon.png" style="height: 40px; display: inline;" alt="">
     </div>
-    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start items-center lg:items-start">
-      <h2 class="my-4 font-normal">
-        <span style="font-weight:600; color:black;"> Easy mobile screens</span>
-      </h2>
-      <h2 class="my-4 font-normal text-grey-darker">
-        Easily drag and drop UI components and build beautiful mobile and web screens.
+    <div class="w-full lg:w-1/2 pl-4 flex flex-col justify-center items-start items-center lg:items-start">
+
+      <h2 class="my-4 font-normal text-grey-darkest">
+        <b>td.web-stitches</b> is no more.
+        <br><br>
+        Go to <b> pazly.dev </b> for a completely new implementation.
         <br> <br>
         A perfect tool for brainstorming and hackathons <br>
-        <img src="./images/bootstrapCssIcon.png" style="height: 50px;" alt="">
-        <img src="./images/materializeCSSIcon.png" style="height: 50px;" alt="">
-        <img src="./images/chartJsIcon.png" style="height: 50px;" alt="">
+
       </h2>
 
-      <a href="./2/" target="_blank"
-        class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center"
-        style="border-color: #F2D024; border-width: 5px;">
-        <span> Try it free</span>
+      <a href="https://pazly.dev" target="_blank"
+        class="text-2xl btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
+        <span> Go to &nbsp;</span> <img src="https://pazly.dev/logo-extended.png"
+          style="height: 1.5em; vertical-align: middle;" alt="">
       </a>
+
     </div>
 
   </section>
-  <!-- header desktop statement-->
-  <section style="margin-bottom: 0; margin-top:70px; "
-    class="font-sans container m-auto max-w-xl flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center md:px-8">
 
-    <div class="w-full lg:w-1/2 flex flex-col justify-center items-start items-center lg:items-end">
-      <h2 class="my-4 font-normal">
-        <span style="font-weight:600; color:black;"> Easy landing page design</span>
-      </h2>
-      <h2 class="my-4 font-normal text-grey-darker lg:text-right">
-        Experiment with building beautiful landing pages and article designs.
-        <br> <br>
-        Drag and drop web components. <br>
-        Replace. Get creative along side your clients.
-        <br>
-        <img src="./images/tailwindCssIcon.png" style="height: 50px;" alt="">
-        <img src="./images/googleChartsIcon.png" style="height: 50px;" alt="">
-      </h2>
-
-      <a href="./1/" target="_blank"
-        class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center"
-        style="border-color: #F2D024; border-width: 5px;">
-        <span> Try it free</span>
-      </a>
-    </div>
-    <div class="w-full lg:w-1/2">
-      <img src="./images/d-header.png" alt="" style="margin-top: 20px;" />
-    </div>
-  </section>
-
-  <!-- support-->
-  <section class="font-sans m-auto w-full" style="margin-top: 30px;  border-top: 1px dashed #debe22;">
-    <div class="flex flex-col sm:flex-row flex-wrap items-center justify-center">
-      <div style=" z-index: 3;" class="w-full p-8 flex flex-col items-left text-sm font-bold">
-        <div class="w-full flex flex-col items-center justify-center my-8">
-          <h2>
-            <a href="https://twitter.com/trendydots" target="_blank"
-              style="text-decoration: none; color: black; float: right;">
-              <img src="../twitter_black.png" style="vertical-align: middle; height: 1em">
-              @trendydots
-            </a>
-        </div>
-        </h2>
-        <h1 class="leading-normal mb-2 text-center text-grey-dark">
-          If you like the project and want to help it grow, <br> please consider donating and becoming a patron. </h1>
-        <br><br>
-        <div class="flex md:flex-row flex-col items-center justify-center mb-8">
-          <div class="flex flex-col">
-            <a href="https://www.buymeacoffee.com/trendydots" target="_blank"
-              class="btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
-              <img src="../bmc-logo.svg" style="height: 1.5em; vertical-align: middle;" alt="">
-              &nbsp;&nbsp;
-              <span> Buy me a cofee</span>
-            </a>
-          </div>
-
-          <!-- 
-          &nbsp;&nbsp;&nbsp;&nbsp;
-          <div class="flex flex-col">
-            <a href="https://www.paypal.me/trendydots" target="_blank"
-              class="btn bg-white border border-blue cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center">
-              <img src="../paypal-logo.png" style="height: 1.5em; vertical-align: middle;" alt="">
-              &nbsp;&nbsp;
-              <span> Donate one time</span>
-            </a>
-          </div>
-          -->
-          &nbsp;&nbsp;&nbsp;&nbsp;
-          <div class="flex flex-col ">
-            <a class="btn bg-white border border-red cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mx-4 mb-2 rounded-full shadow inline-flex items-center"
-              href="https://www.patreon.com/bePatron?u=34703537" target="_blank">
-              <img src="../patreon-logo1.png" style="height: 1.5em; vertical-align: middle;" alt="">
-              &nbsp;
-              <span> Become a patron</span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <!-- old upcomming features
-      <div class="w-full flex md:flex-row flex-col items-center justify-center px-8 lg:mx-8">
-        <div class="w-full md:w-1/2 my-4 px-8">
-          <h2 class="leading-normal mb-2 text-center text-grey-dark">I. Components Editing </h2>
-          <img src="./images/card-editor1.png" alt=""
-            style="display:block; margin: 0 auto; margin-top: 10px; max-height: 260px;" />
-          <h4 class="leading-normal mb-2 text-center"> After dragging a component into the mobile
-            preview, a small dedicated editor will allow easy changes to the component’s information. Your prototypes
-            -
-            your data.
-          </h4>
-        </div>
-        <div class="w-full md:w-1/2 my-4 px-8">
-          <h2 class="leading-normal mb-2 text-center text-grey-dark">II. Transitions between sceens </h2>
-          <img src="./images/screen-links.png" alt=""
-            style="display:block; margin: 0 auto; margin-top: 10px; max-height: 260px;" />
-          <h4 class="leading-normal mb-2 text-center "> Transitions between screens will allow you to
-            show and tell user stories. Impress your audience with a clear user experience walkthrough.</h4>
-
-        </div>
-      </div>
-      -->
-  </section>
-  <section class="font-sans w-full px-8 flex flex-col lg:flex-col text-center" style="margin-bottom: 0;">
-    <div class="text-center">
-      <h1 class="leading-normal mb-2 text-center "> Upcoming features for our patrons</h1>
-    </div>
-    <div class="flex flex-col sm:flex-row flex-wrap my-8 w-full items-center justify-around">
-      <div style="background: #F5F5F5; "
-        class="m-2 w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center h-48 md:h-64 border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
-        <h3 class="mt-4 mb-1">Individual Accounts <br> Multiple private projects</h3>
-        <p class="mt-4 text-center text-grey-darker leading-normal px-6 ">Build multiple private projects. Save & Update
-          them as many times you need.</p>
-      </div>
-      <div style="background: #F5F5F5;"
-        class="m-2 w-full sm:w-1/2 md:w-1/4  flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-r border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
-
-        <h3 class="mt-4 mb-1">Premium Components</h3>
-        <p class="mt-4 text-center text-grey-darker leading-normal ">Get access to exclusive premium components with a
-          high degree of responsiveness, some of which will allow customization</p>
-      </div>
-      <div style="background: #F5F5F5;"
-        class="m-2 w-full sm:w-1/2 md:w-1/4 flex flex-col items-center justify-center h-48 md:h-64 p-8  border-grey-lightest border-b hover:shadow-md hover:border-0 bg-white hover:transform-scale-subtle transition-normal hover:show-child">
-
-        <h3 class="mt-4 mb-1">Mobile & Desktop working together</h3>
-        <p class="mt-4 text-center text-grey-darker leading-normal ">Easily switch between mobile and desktop views and
-          experience your mockups responsiveness. Download both versions in a ready to code bundle.</p>
-      </div>
-
-    </div>
-  </section>
   <!-- how to use -->
   <section class="my-8 lg:my-16 font-sans w-full m-auto flex flex-col text-center justify-center items-center"
     style="background: #F5F5F5;">
@@ -236,14 +100,12 @@
       <br><br><br><br>
       <h3 class="leading-normal mb-4 text-grey-darkest text-center p-8">
         A web application that helps you rapidly design a landing page or an editorial website.
-        Using Google Charts, the data visualization components make it easy to express knowledge in beautiful web
-        pages. <br>
         It takes seconds to experiment with different layouts.
       </h3>
 
       <br><br>
 
-      <iframe class="w-full rounded shadow-md" src="https://www.youtube-nocookie.com/embed/frEiVOU1dak" frameborder="0"
+      <iframe class="w-full rounded shadow-md" src="https://www.youtube-nocookie.com/embed/fmM2mP9uhls" frameborder="0"
         allow="autoplay; gyroscope;" allowfullscreen style="height: 450px; max-width: 790px;"></iframe>
       <br><br>
       <br><br>
@@ -273,11 +135,6 @@
     </div>
   </section>
 
-  <section
-    class="my-8 lg:my-16 font-sans w-full m-auto flex flex-col lg:flex-row text-center justify-center items-center"
-    style="background: #F5F5F5;">
-
-  </section>
 
 
 
