--- a/twitpitch/index.html
+++ b/twitpitch/index.html
@@ -5,6 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113784035-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "UA-113784035-1");
+  </script>
+
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Import materialize.css-->
@@ -227,6 +241,17 @@
             </a>
           </div>
           <a id='twitter-post' target="_blank" style="visibility: hidden; width: 1px;"></a>
+
+
+          <div class="col s12" style="margin-left: 5%; margin-right: 5%; padding: 16px; text-align: center;">
+            <h5>Now that you're famous on Twitter, you need a cool website. Build one with</h5>
+            <a href="https://pazly.dev" class="waves-effect waves-light btn-large"
+              style="border-radius: 50px; font-weight: 700; max-width: 300px; margin-top: 5px; background-color: white; border: 4px solid #e0acc6;">
+              <img src="https://pazly.dev/logo-extended.png" alt="" srcset="" style="height: 80%; margin-top: 4%;">
+            </a>
+            <p> by<img src="https://trendydots.com/assets/img/logo.png" alt="" class="border"
+                style="vertical-align: middle; border-radius: 6px; height: 20px; margin-right: 5px;"></p>
+          </div>
         </div>
       </div>
     </div>
