--- a/twitpitch/index.html
+++ b/twitpitch/index.html
@@ -68,9 +68,12 @@
       font-size: 18px !important;
     }
   </style>
+
+  <link rel="stylesheet" type="text/css" href="../../css/jquery-eu-cookie-law-popup.css" />
+  <script src="../../js/jquery-eu-cookie-law-popup.js"></script>
 </head>
 
-<body>
+<body class="eupopup eupopup-bottom eupopup-style-compact">
   <!-- html[0] -->
   <div class="row">
 
