--- a/me/index.html
+++ b/me/index.html
@@ -240,23 +240,24 @@
       </div>
     </section>
 
-    <!-- Web Stitches-->
+    <!-- Pazly-->
     <section
       class="bg-white mb-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
       <div class="w-full lg:w-1/2">
-        <img class="shadow-md rounded" src="./ws.jpg" alt="" />
+        <img class="shadow-md rounded" src="https://pazly.dev/hero.png" alt="" />
       </div>
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
         <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">web development</label>
-        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> web-stitches</h2>
+        <h2 class="my-4 font-normal font-bold">Pazly (<a href="https://pazly.dev" target="_blank">pazly.dev</a>)</h2>
         <p class="leading-normal mb-4 text-grey-darkest">
-          A web application that helps you rapidly design a landing page or an editorial website.
-          Using Google Charts, the data visualization components make it easy to express knowledge in beautiful web
-          pages.
-          It takes seconds to experiment with different layouts.
+          Easily drag and drop UI components and build beautiful mobile and web screens.
+          <br><br>
+          A perfect tool for your client's first impression. These days working remote means sharing screens, showing
+          and telling. When you first meet your client, use pazly to decide on the web developement requirements. Once
+          you both decide on a layout, download the template and start customizing.
           <br><br>
           <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
-            href="/web-stitches/" target="_blank" style="white-space: nowrap; border-color: green;">
+            href="https://pazly.dev" target="_blank" style="white-space: nowrap; border-color: #c37b9f;">
             <span style="white-space: nowrap;"> Try for FREE </span>
           </a>
 
