--- a/twitpitch/index.html
+++ b/twitpitch/index.html
@@ -76,20 +76,20 @@
 <body class="eupopup eupopup-bottom eupopup-style-compact">
   <!-- html[0] -->
   <div class="row">
+    <div class=" col s12 center z-depth-1" style="padding: 15px 0; background: #fff;">
+      <img src="https://trendydots.com/assets/img/logo.png" alt="" class="border"
+        style="vertical-align: top; border-radius: 6px; height: 40px; margin-right: 5px;" />
+      <b style="font-size: 1.8rem;">
+        <span style="display: inline; text-indent: 0.2em; font-weight: 600; ">tweet pitch builder
+        </span>
+      </b>
+    </div>
+  </div>
 
-    <div class="container">
-      <div class="col s12 center" style="margin: 15px 0; padding: 0;">
-        <img src="https://trendydots.com/assets/img/logo.png" alt="" class="border"
-          style="vertical-align: middle; border-radius: 6px; height: 2rem; margin-right: 5px;" />
-        <br>
-        <b style="font-size: 1.35rem;">
-          <span style="display: inline; text-indent: 0.2em; font-weight: 600;">trendy dots - twit pitch builder
-          </span>
-        </b>
-      </div>
-
+  <div class="container">
+    <div class="row" style="margin-bottom: 30px;">
       <!-- input text -->
-      <div class="col s12 m6">
+      <div class="col s12 m6" style="margin-top: 10px;">
         <div class="row">
           <div class="col s12">
             <ul class="tabs" style="background: #f7f7f7;">
@@ -106,8 +106,8 @@
                   <div style="display: flex;">When</div>
                   <div class="input-field"
                     style="display: flex; flex-grow: 1; margin-left: 12px; margin-right: 12px;  vertical-align: middle;">
-                    <input id="problem_statement" type="text" class="input-font-size">
-                    <label for="problem_statement" class="input-font-size">Problem Statement</label>
+                    <input id="problem_statement" type="text" style="font-size: 16px;">
+                    <label for="problem_statement" style="font-size: 16px;">Problem Statement</label>
                   </div>
                   <div style="display: flex;">, </div>
                 </div>
@@ -115,14 +115,14 @@
                 <div style="display:flex; flex-flow: row wrap; justify-content: flex-start; align-items: baseline;">
                   <div class="input-field"
                     style=" margin-left: 8px; display: flex; flex-grow: 1; vertical-align: middle;">
-                    <input id="company_name" type="text" class="input-font-size">
-                    <label for="company_name" class="input-font-size">I | We | Company Name</label>
+                    <input id="company_name" type="text" style="font-size: 16px;">
+                    <label for="company_name" style="font-size: 16px;">I | We | Company Name</label>
                   </div>
                   <div style="display: flex; margin-left: 6px; margin-right: 6px;"> do </div>
                   <div class="input-field"
                     style=" margin-left: 8px; min-width: 260px; display: flex; flex-grow: 1; vertical-align: middle;">
-                    <input id="solution_statement" type="text" class="input-font-size">
-                    <label for="solution_statement" class="input-font-size">Solution Statement</label>
+                    <input id="solution_statement" type="text" style="font-size: 16px;">
+                    <label for="solution_statement" style="font-size: 16px;">Solution Statement</label>
                   </div>
                   <div style="display: flex;"> , </div>
                 </div>
@@ -131,24 +131,24 @@
                   <div style="display: flex;"> so that </div>
                   <div class="input-field"
                     style=" margin-left: 8px; display: flex; flex-grow: 1; vertical-align: middle;">
-                    <input id="impact_statement" type="text" class="input-font-size">
-                    <label for="impact_statement" class="input-font-size">Impact Statement</label> </div>
+                    <input id="impact_statement" type="text" style="font-size: 16px;">
+                    <label for="impact_statement" style="font-size: 16px;">Impact Statement</label> </div>
                   <div style="display: flex;"> . </div>
                 </div>
 
                 <div style="display:flex; flex-flow: row wrap; justify-content: flex-start; align-items: baseline;">
                   <div class="input-field"
                     style=" margin-left: 8px; display: flex; flex-grow: 1; vertical-align: middle;">
-                    <input id="call_to_action" type="text" class="input-font-size">
-                    <label for="call_to_action" class="input-font-size">Call to Action</label> </div>
+                    <input id="call_to_action" type="text" style="font-size: 16px;">
+                    <label for="call_to_action" style="font-size: 16px;">Call to Action</label> </div>
                 </div>
                 <br>
                 <div style="display:flex; flex-flow: row wrap; justify-content: flex-start; align-items: baseline;">
                   <div style="display: flex;"> (optional) via </div>
                   <div class="input-field"
                     style=" margin-left: 8px; display: flex; flex-grow: 1;  vertical-align: middle;">
-                    <input id="twitter_handel" type="text" class="input-font-size">
-                    <label for="twitter_handel" class="input-font-size">twitter handle(no @ needed)</label>
+                    <input id="twitter_handel" type="text" style="font-size: 16px;">
+                    <label for="twitter_handel" style="font-size: 16px;">twitter handle(no @ needed)</label>
                   </div>
                 </div>
 
@@ -162,44 +162,30 @@
             <div class="row" style="min-width: 300px;">
               <div class="input-field col s12">
                 <textarea id="textareapitch" class="materialize-textarea" rows="3" data-length="220"
-                  style="font-size: 22px;"></textarea>
-                <label for="textareapitch" style="font-size: 22px;">Your freestyle pitch</label>
+                  style="font-size: 16px;"></textarea>
+                <label for="textareapitch" style="font-size: 16px;">Your freestyle pitch</label>
               </div>
               <div class="col s12">
                 <div style="display:flex; flex-flow: row wrap; justify-content: flex-start; align-items: baseline;">
                   <div style="display: flex;"> via </div>
                   <div class="input-field"
                     style=" margin-left: 8px; display: flex; flex-grow: 1;  vertical-align: middle;">
-                    <input id="twitter_handel2" type="text" class="input-font-size">
-                    <label for="twitter_handel2" class="input-font-size">twitter handle(no @ needed)</label>
+                    <input id="twitter_handel2" type="text" style="font-size: 16px;">
+                    <label for="twitter_handel2" style="font-size: 16px;">twitter handle(no @ needed)</label>
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col s12" style="padding: 0;">
-            <h6>
-              What is a twit pitch? A pitch optimized for twitter and other social media network posts. It tipically
-              consists of 140 to 280 characters.
-              More details on <a target="_blank" href="https://www.investopedia.com/terms/t/twit-pitch.asp">
-                Investopedia</a>
-            </h6>
-            <h6>
-              Made by <a target="_blank" href="https://twitter.com/trendydots"> @trendydots</a>
-            </h6>
-          </div>
-
         </div>
       </div>
-
       <!-- output pitch -->
-      <div class="col s12 m6">
+      <div class="col s12 m6" style="margin-top: 1px;">
         <div class="row">
           <div class="col s1"></div>
           <div id="with-template-card" class="col s11 center">
             <br><br>
-            <br>
             <div class="card" style="border-radius: 6px; overflow: hidden; width: 100%;">
               <div class="card-content" style="font-size: 18px;">
                 <img src="./twitter.png" style="border-radius: 6px; height: 30px; margin-right: 5px; display: block;" />
@@ -224,7 +210,6 @@
 
           <div id="freestyle-card" class="col s11 center" style="font-size: 18px;">
             <br><br>
-            <br>
             <div class="card" style="border-radius: 6px; overflow: hidden; width: 100%;">
               <div class="card-content">
                 <img src="./twitter.png" style="border-radius: 6px; height: 30px; margin-right: 5px; display: block;" />
@@ -245,20 +230,86 @@
           </div>
           <a id='twitter-post' target="_blank" style="visibility: hidden; width: 1px;"></a>
 
-
-          <div class="col s12" style="margin-left: 5%; margin-right: 5%; padding: 16px; text-align: center;">
-            <h5>Now that you're famous on Twitter, you need a cool website. Build one with</h5>
-            <a href="https://pazly.dev" class="waves-effect waves-light btn-large"
-              style="border-radius: 50px; font-weight: 700; max-width: 300px; margin-top: 5px; background-color: white; border: 4px solid #e0acc6;">
-              <img src="https://pazly.dev/logo-extended.png" alt="" srcset="" style="height: 80%; margin-top: 4%;">
-            </a>
-            <p> by<img src="https://trendydots.com/assets/img/logo.png" alt="" class="border"
-                style="vertical-align: middle; border-radius: 6px; height: 20px; margin-right: 5px;"></p>
+          <div class="col s12 center" style="padding-top: 20px; padding-left:20px; padding-right:20px">
+            <h6>
+              What is a tweet pitch? A pitch optimized for twitter and other social media network posts. It tipically
+              consists of 140 to 280 characters.
+              More details on <a target="_blank" href="https://www.investopedia.com/terms/t/twit-pitch.asp">
+                Investopedia</a>
+            </h6>
+            <h6>
+              Made by <a target="_blank" href="https://twitter.com/trendydots"> @trendydots</a>
+            </h6>
           </div>
         </div>
       </div>
     </div>
   </div>
+
+  <div class="row" style="background: #fff; margin-bottom: 0;">
+    <div class="container">
+      <div class="col s12 m6" style="margin-top: 10px;">
+        <div class="row">
+          <div class="card" style="max-width: 420px; margin-top: -50px; border-radius: 6px; overflow: hidden;">
+            <div class="card-image">
+              <img
+                src="https://images.unsplash.com/photo-1592499879835-3a1691ab26be?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80">
+            </div>
+            <div class="card-content center">
+              <h5>Now that you're famous on Twitter, you need a cool website. <br><br> Build one with</h5>
+              <a href="https://pazly.dev" class="waves-effect waves-light btn-large"
+                style="border-radius: 50px; font-weight: 700; max-width: 300px; margin-top: 5px; background-color: white; border: 4px solid #e0acc6;">
+                <img src="https://pazly.dev/logo-extended.png" alt="" srcset="" style="height: 80%; margin-top: 4%;">
+              </a>
+              <p>
+                by<img src="https://trendydots.com/assets/img/logo.png" alt="" class="border"
+                  style="vertical-align: middle; border-radius: 6px; height: 20px; margin-right: 5px;"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col s12 m6" style="margin-top: 10px; padding-bottom: 100px;">
+        <div class="row">
+          <div class="col s12">
+            <div class="row" style="margin-bottom: 0; margin-left: auto;">
+              <h4>Why <a href="https://pazly.dev"><span style="color: #1d4587;">pazly</span><span
+                    style="color: #c398ae;">.dev</span></a>
+              </h4>
+            </div>
+          </div>
+        </div>
+        <div class="col s12">
+          <div class="row">
+            <div class="col s6">
+              <h5>Easy to use</h5>
+              <p>Easily drag and drop UI components and build beautiful mobile and web screens.</p>
+            </div>
+            <div class="col s6">
+              <h5>Fast</h5>
+              <p>It takes minutes to build a layout by combining top quality components. Edit the text and images in
+                real time.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s12">
+          <div class="row">
+            <div class="col s6">
+              <h5>Always on(line)</h5>
+              <p>Pazly is online and therefore always on. The free version does not require login. Downloading your work
+                is always possible.</p>
+            </div>
+            <div class="col s6">
+              <h5>Many components</h5>
+              <p>The available components cover most use cases. Pazly is constantly updating the component list.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
 
   <script>
     M.AutoInit();
