--- a/twitpitch/index.html
+++ b/twitpitch/index.html
@@ -77,7 +77,7 @@
   <!-- html[0] -->
   <div class="row">
     <div class=" col s12 center z-depth-1" style="padding: 15px 0; background: #fff;">
-      <img src="https://trendydots.com/assets/img/logo.png" alt="" class="border"
+      <img src="logo.png" alt="" class="border"
         style="vertical-align: top; border-radius: 6px; height: 40px; margin-right: 5px;" />
       <b style="font-size: 1.8rem;">
         <span style="display: inline; text-indent: 0.2em; font-weight: 600; ">tweet pitch builder
@@ -232,7 +232,7 @@
 
           <div class="col s12 center" style="padding-top: 20px; padding-left:20px; padding-right:20px">
             <h6>
-              What is a tweet pitch? A pitch optimized for twitter and other social media network posts. It tipically
+              What is a tweet pitch? A pitch optimised for twitter and other social media network posts. It typically
               consists of 140 to 280 characters.
               More details on <a target="_blank" href="https://www.investopedia.com/terms/t/twit-pitch.asp">
                 Investopedia</a>
