--- a/twitpitch/index.html
+++ b/twitpitch/index.html
@@ -257,7 +257,7 @@
             </div>
             <div class="card-content center">
               <h5>Now that you're famous on Twitter, you need a cool website. <br><br> Build one with</h5>
-              <a href="https://pazly.dev" class="waves-effect waves-light btn-large"
+              <a href="https://pazly.dev/?ref=td.tweetpitch" class="waves-effect waves-light btn-large"
                 style="border-radius: 50px; font-weight: 700; max-width: 300px; margin-top: 5px; background-color: white; border: 4px solid #e0acc6;">
                 <img src="https://pazly.dev/logo-extended.png" alt="" srcset="" style="height: 80%; margin-top: 4%;">
               </a>
@@ -273,7 +273,7 @@
         <div class="row">
           <div class="col s12">
             <div class="row" style="margin-bottom: 0; margin-left: auto;">
-              <h4>Why <a href="https://pazly.dev"><span style="color: #1d4587;">pazly</span><span
+              <h4>Why <a href="https://pazly.dev/?ref=td.tweetpitch"><span style="color: #1d4587;">pazly</span><span
                     style="color: #c398ae;">.dev</span></a>
               </h4>
             </div>
