--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
       <h2 class="my-4 font-normal">
         <span style="font-weight:500; color:black;">The trend research platform</span>
       </h2>
-      <h2 class="my-4 font-normal text-grey-darker">
-        Your first step to market research
-      </h2>
+      <h3 class="my-4 font-normal text-grey-darker">
+        Predicting internet search trends, our platform offers a first step to market research
+      </h3>
 
       <a href="#contact-us" target="_self"
         class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow inline-flex items-center"
