--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
     </div>
     <div class="w-full lg:w-1/3 flex flex-col justify-center items-start items-center lg:items-start">
       <h2 class="my-4 font-normal">
-        <span style="font-weight:500; color:black;">The trend research platform</span>
+        <span style="font-weight:500; color:black;">online trend research </span>
       </h2>
       <h3 class="my-4 font-normal text-grey-darker">
-        Predicting internet search trends, our platform offers a first step to market research
+        Predicting internet search trends, our application offers a first step to market research
       </h3>
 
       <a href="#contact-us" target="_self"
@@ -264,7 +264,7 @@
       </div>
       <br>
     -->
-      <h1 class="my-4 font-normal text-grey-darker">Interested in using the platform?
+      <h1 class="my-4 font-normal text-grey-darker">Interested in using the tool?
       </h1>
       <p class="">
         Follow our Patreon posts to keep up with developments. Become a patron and get access to our project.
