--- a/me/index.html
+++ b/me/index.html
@@ -191,27 +191,28 @@
 
   <!-- features-1 -->
   <div class="w-full" style="background: #fff; padding-bottom: 20px;">
-    <!-- Trends -->
+
+    <!-- Pazly-->
     <section
-      class="bg-white my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+      class="bg-white mb-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
       <div class="w-full lg:w-1/2">
-        <img src="./in3.png" class="shadow-md rounded" alt="" />
+        <img class="shadow-md rounded" src="https://pazly.dev/laptop1.jpg" alt="" />
       </div>
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">behavioural economics</label>
-        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> trends research</h2>
+        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">web development</label>
+        <h2 class="my-4 font-normal font-bold">Pazly (<a href="https://pazly.dev" target="_blank">pazly.dev</a>)</h2>
         <p class="leading-normal mb-4 text-grey-darkest">
-          The td<span style="color:#F2D024">.</span> trends research platform platform that aims to offer an intuitive,
-          easy to use way for getting informed about the
-          things that matter.
-          When you are interested in human/consumer behaviour towards companies, products, world events, or innovative
-          concepts, my td<span style="color:#F2D024">.</span> trends research platform can help you with quick and easy
-          insights.
+          Easily drag and drop UI components and build beautiful mobile and web screens.
+          <br><br>
+          A perfect tool for your client's first impression. These days working remote means sharing screens, showing
+          and telling. When you first meet your client, use pazly to decide on the web developement requirements. Once
+          you both decide on a layout, download the template and start customizing.
           <br><br>
           <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
-            href="/invest/" target="_blank" style="white-space: nowrap; border-color: #ff9800;">
-            <span style="white-space: nowrap;"> Check out details </span>
+            href="https://pazly.dev" target="_blank" style="white-space: nowrap; border-color: #c37b9f;">
+            <span style="white-space: nowrap;"> Try for FREE </span>
           </a>
+
         </p>
       </div>
     </section>
@@ -240,27 +241,27 @@
       </div>
     </section>
 
-    <!-- Pazly-->
+    <!-- Trends -->
     <section
-      class="bg-white mb-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+      class="bg-white my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
       <div class="w-full lg:w-1/2">
-        <img class="shadow-md rounded" src="https://pazly.dev/hero.png" alt="" />
+        <img src="./in3.png" class="shadow-md rounded" alt="" />
       </div>
       <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">web development</label>
-        <h2 class="my-4 font-normal font-bold">Pazly (<a href="https://pazly.dev" target="_blank">pazly.dev</a>)</h2>
+        <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">behavioural economics</label>
+        <h2 class="my-4 font-normal font-bold">td<span style="color:#F2D024">.</span> trends research</h2>
         <p class="leading-normal mb-4 text-grey-darkest">
-          Easily drag and drop UI components and build beautiful mobile and web screens.
-          <br><br>
-          A perfect tool for your client's first impression. These days working remote means sharing screens, showing
-          and telling. When you first meet your client, use pazly to decide on the web developement requirements. Once
-          you both decide on a layout, download the template and start customizing.
+          The td<span style="color:#F2D024">.</span> trends research platform platform that aims to offer an intuitive,
+          easy to use way for getting informed about the
+          things that matter.
+          When you are interested in human/consumer behaviour towards companies, products, world events, or innovative
+          concepts, my td<span style="color:#F2D024">.</span> trends research platform can help you with quick and easy
+          insights.
           <br><br>
           <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
-            href="https://pazly.dev" target="_blank" style="white-space: nowrap; border-color: #c37b9f;">
-            <span style="white-space: nowrap;"> Try for FREE </span>
+            href="/invest/" target="_blank" style="white-space: nowrap; border-color: #ff9800;">
+            <span style="white-space: nowrap;"> Check out details </span>
           </a>
-
         </p>
       </div>
     </section>
@@ -331,10 +332,6 @@
           and designers working with NGOs and social enterprises to solve complex challenges and identify new
           social impact opportunities.
           <br><br>
-          <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
-            href="/data4good/" target="_blank" style="white-space: nowrap; border-color:green;">
-            <span style="white-space: nowrap;"> Explore </span>
-          </a>
         </p>
       </div>
       <div class="w-full lg:w-1/2">
