--- a/privacy-statement.html
+++ b/privacy-statement.html
@@ -47,7 +47,7 @@
         &nbsp;&nbsp; • Phone number <br />
         &nbsp;&nbsp; • Bank details (only when you submit them in Trendy Dot's payment forms) <br />
         &nbsp;&nbsp; • E-mail address <br />
-        &nbsp;&nbsp; • IP-address (as recorded by Google Analytics) <br />
+        &nbsp;&nbsp; • IP-address (as recorded by Google Analytics and Hotjar) <br />
         &nbsp;&nbsp; • Data about your activity on this website <br />
         &nbsp;&nbsp; • Internet browser and device type <br />
       </i>
@@ -104,13 +104,15 @@
       our order, we conclude a processor agreement to ensure the same level of security and confidentiality of your
       data. Trendy Dots shares (only the required personal) data with the following third parties: <br />
       <i>
-        &nbsp;&nbsp; • Google Analytics: to see overall user behavior on this website <br />
+        &nbsp;&nbsp; • Google Analytics: count user access and behaviur on this website <br />
+        &nbsp;&nbsp; • Hotjar: to see overall user behavior on this website <br />
         &nbsp;&nbsp; • Gmail: to reply to messages send to suport.trendydots[at]gmail.com and
         research.trendydots[at]gmail.com <br />
         &nbsp;&nbsp; • Basin: to collect subscriptions from Trendy Dot’s websites <br />
         &nbsp;&nbsp; • Mailchimp: to send newsletters to the email addresses that have actively signed up for Trendy
         Dots’s newsletter <br />
         &nbsp;&nbsp; • Patreon: to receive your donations which help us build and expand our software <br />
+        &nbsp;&nbsp; • Buy me a coffee: to receive your donations which help us build and expand our software <br />
 
       </i>
     </p>
