--- a/privacy-statement.html
+++ b/privacy-statement.html
@@ -106,13 +106,13 @@
       <i>
         &nbsp;&nbsp; • Google Analytics: count user access and behaviur on this website <br />
         &nbsp;&nbsp; • Hotjar: to see overall user behavior on this website <br />
-        &nbsp;&nbsp; • Gmail: to reply to messages send to suport.trendydots[at]gmail.com and
-        research.trendydots[at]gmail.com <br />
+        &nbsp;&nbsp; • Gmail: for communicating via email <br />
         &nbsp;&nbsp; • Basin: to collect subscriptions from Trendy Dot’s websites <br />
         &nbsp;&nbsp; • Mailchimp: to send newsletters to the email addresses that have actively signed up for Trendy
         Dots’s newsletter <br />
         &nbsp;&nbsp; • Patreon: to receive your donations which help us build and expand our software <br />
         &nbsp;&nbsp; • Buy me a coffee: to receive your donations which help us build and expand our software <br />
+        &nbsp;&nbsp; • Firebase: (https://firebase.google.com/) to handle user authentication and data management in our digital services <br />
 
       </i>
     </p>
