--- a/me/index.html
+++ b/me/index.html
@@ -259,7 +259,7 @@
           insights.
           <br><br>
           <a class="btn bg-white border cursor-pointer no-underline text-grey-darkest font-bold py-2 px-4 mb-2 rounded-full shadow-md md:shadow items-center"
-            href="/invest/" target="_blank" style="white-space: nowrap; border-color: #ff9800;">
+            href="invest.html" target="_blank" style="white-space: nowrap; border-color: #ff9800;">
             <span style="white-space: nowrap;"> Check out details </span>
           </a>
         </p>
